REFACTOR(popover) without tether.js

--- a/src/ng-vcl/popover/popover.component.html
+++ b/src/ng-vcl/popover/popover.component.html
@@ -1,3 +1,5 @@
+
+<!--
 <vcl-tether
   *ngIf="visible"
   [zIndex]="zIndex"
@@ -6,8 +8,13 @@
   [targetAttachment]="targetAttachment"
   [attachment]="attachment">
   <div [ngStyle]="style" [@popOverState]="state"
-  (offClick)="offClick()">
+  (offClick)="offClick()">-->
     <ng-content></ng-content>
-  </div>
+
+
+<!--  </div>
 </vcl-tether>
+
 <div *ngIf="open && layer" class="vclLayerCover" [style.zIndex]="coverZIndex"></div>
+
+-->
