--- a/demo/components/popover/popover.component.html
+++ b/demo/components/popover/popover.component.html
@@ -1,17 +1,22 @@
 <div style="min-height:500px; width: 100%;">
-  <button vcl-button (tap)="showPopover()" label="show popover"></button>
+  <button vcl-button (tap)="togglePopover()" label="toggle popover"></button>
 
-  <vcl-popover target='#target' [(open)]="open" class='' [style]="style">
+  <vcl-popover target='#target' [(open)]="open" [style]="style">
     popover text goes here <br>
     <button vcl-button (tap)="showPopover2()" label="show popover2" id="button1"></button>
-    <button vcl-button (tap)="closePopover()" label="close popover"></button>
+    <button vcl-button (tap)="closePopover()" label="close popover" id="buttonClose"></button>
   </vcl-popover>
 
-  <vcl-popover target='#button1' [(open)]="open2" [style]="style">
+
+<br>
+<br>
+<br>
+
+  <vcl-popover target='#buttonClose' [(open)]="open2" targetX="right" attachmentX="left" targetY="top" attachmentY="top">
     popover 2 text goes here <br>
   </vcl-popover>
 
-  <div id="target" style="position: absolute; top: 200px; left: 200px; padding: 10px; border: 3px double green">
+  <div id="target" style="position: absolute; top: 300px; left: 200px; padding: 10px; border: 3px double green">
     this is the target
   </div>
 </div>
