--- a/src/ng-vcl/select/select.component.html
+++ b/src/ng-vcl/select/select.component.html
@@ -26,6 +26,7 @@
   </div>
 
   <button vcl-button
+    type="button"
     tabindex="-1"
     class="vclTransparent vclSquare vclAppended"
     [appIcon]="expanded ? expandedIcon : collapsedIcon">
