--- a/src/ng-vcl/tab-nav/tab-nav.component.html
+++ b/src/ng-vcl/tab-nav/tab-nav.component.html
@@ -14,11 +14,9 @@
     </div>
   </div>
   <div class="vclTabContent {{tabContentClass}}" [class.vclNoBorder]="!borders">
-    <template ngFor let-tab [ngForOf]="tabs" let-i="index">
-      <div role="tabpanel" class="vclTabPanel" *ngIf="selectedTabIndex===i">
-        <div [wormhole]="tab.content"></div>
-      </div>
-    </template>
+    <div role="tabpanel" class="vclTabPanel">
+      <div #tabContent></div>
+    </div>
     <div role="tabpanel" class="vclTabPanel">
       <ng-content></ng-content>
     </div>
