ADD(select) demo with select in label

--- a/demo/components/select/select.component.html
+++ b/demo/components/select/select.component.html
@@ -62,3 +62,14 @@
 <div *ngIf="selectSingleValueHtml">
   Value: {{selectSingleValueHtml}}
 </div>
+
+
+<br/>
+
+<h3>Select inside of label</h3>
+<vcl-label>  Label Text<br>
+  <vcl-select>
+    <vcl-select-option value="1">Item 1</vcl-select-option>
+    <vcl-select-option value="2">Item 2</vcl-select-option>
+  </vcl-select>
+</vcl-label>
