ADD(label) for-attribute

--- a/demo/components/label/label.component.html
+++ b/demo/components/label/label.component.html
@@ -10,8 +10,8 @@
 </vcl-label>
 
 <br/>
-<vcl-label label="I'm required" subLabel="" class="myclass1 myclass2" [required]="true">
-  <input value="foobar" />
+<vcl-label label="I'm required" subLabel="" class="myclass1 myclass2" [required]="true" for="myInput">
+  <input id="myInput" value="foobar" />
 </vcl-label>
 
 
