select: toggle dropdown on button tap

--- a/src/ng-vcl/select/select.component.html
+++ b/src/ng-vcl/select/select.component.html
@@ -29,7 +29,8 @@
     type="button"
     tabindex="-1"
     class="vclTransparent vclSquare vclAppended"
-    [appIcon]="expanded ? expandedIcon : collapsedIcon">
+    [appIcon]="expanded ? expandedIcon : collapsedIcon"
+    (tap)="toggle($event)">
   </button>
 </div>
 
