--- a/src/ng-vcl/select/select.component.html
+++ b/src/ng-vcl/select/select.component.html
@@ -1,50 +1,52 @@
-<div
-  #select
-  [attr.aria-autocomplete]="list"
-  class="vclLayoutHorizontal vclSelect vclInputGroupEmb"
-  [style.marginBottom]="0"
-  >
-
-  <div class="vclInput" readonly *ngIf="!displayValueTokens()" [class.vclSelected]="focused" (tap)="toggle($event)">
-    {{displayValue}}
-  </div>
-
-  <div class="vclInput vclTokenInput vclLayoutHorizontal vclLayoutWrap" readonly *ngIf="displayValueTokens()" [class.vclSelected]="focused" (tap)="toggle($event)">
-    <div class="vclTokenContainer">
-      <ng-container *ngFor="let item of dropdown.items">
-        <div *ngIf="item.selected" class="vclToken">
-          <span class="vclTokenLabel">{{item.label}}</span>
-          <button type="button" tabindex="-1" touch-action="none" aria-label="Remove" title="Remove"
-          class="vclTransparent vclButton">
-            <div class="vclIcogram" (click)="unselectItem(item)">
-              <span role="img" class="vclIcon fa fa-remove"></span>
-            </div>
-          </button>
-        </div>
-      </ng-container>
-    </div>
-  </div>
-
-  <button vcl-button
-    type="button"
-    tabindex="-1"
-    class="vclTransparent vclSquare vclAppended"
-    [appIcon]="expanded ? expandedIcon : collapsedIcon"
-    (tap)="toggle($event)">
-  </button>
-</div>
-
-<vcl-dropdown #dropdown
-    [(expanded)]="expanded"
-    [items]="items"
-    (change)="onSelect($event)"
-    [minSelectableItems]="minSelectableItems"
-    [maxSelectableItems]="maxSelectableItems"
-    tabindex="-1"
-    [style.position]="'relative'"
-    [style.top.px]="dropdownTop"
-    [style.width]="'100%'"
-    [style.position]="'absolute'"
-    [style.zIndex]="999999"
+<div (offClick)="close()">
+  <div
+    #select
+    [attr.aria-autocomplete]="list"
+    class="vclLayoutHorizontal vclSelect vclInputGroupEmb"
+    [style.marginBottom]="0"
     >
-</vcl-dropdown>
+
+    <div class="vclInput" readonly *ngIf="!multiSelect" [class.vclSelected]="focused" (tap)="toggle($event)">
+      {{displayValue}}
+    </div>
+
+    <div class="vclInput vclTokenInput vclLayoutHorizontal vclLayoutWrap" readonly *ngIf="multiSelect" [class.vclSelected]="focused" (click)="toggle($event)">
+      <div class="vclTokenContainer">
+        <ng-container *ngFor="let item of selectedItems">
+          <div class="vclToken">
+            <span class="vclTokenLabel">{{item.label}}</span>
+            <button type="button" tabindex="-1" touch-action="none" aria-label="Remove" title="Remove"
+            class="vclTransparent vclButton">
+              <div class="vclIcogram" (click)="unselectItem($event, item)">
+                <span role="img" class="vclIcon fa fa-remove"></span>
+              </div>
+            </button>
+          </div>
+        </ng-container>
+      </div>
+    </div>
+
+    <button vcl-button
+      type="button"
+      tabindex="-1"
+      class="vclTransparent vclSquare vclAppended"
+      [appIcon]="expanded ? expandedIcon : collapsedIcon"
+      (tap)="toggle($event)">
+    </button>
+  </div>
+
+  <vcl-dropdown #dropdown
+      [(expanded)]="expanded"
+      [items]="items"
+      (change)="onDropdownChange($event)"
+      [minSelectableItems]="minSelectableItems"
+      [maxSelectableItems]="maxSelectableItems"
+      tabindex="-1"
+      [style.position]="'relative'"
+      [style.top.px]="dropdownTop"
+      [style.width]="'100%'"
+      [style.position]="'absolute'"
+      [style.zIndex]="999999"
+      >
+  </vcl-dropdown>
+</div>
