Switch from click to tap and remove hammerjs dependency

--- a/demo/components/layer/foo.layer.html
+++ b/demo/components/layer/foo.layer.html
@@ -5,8 +5,8 @@
   <div class="vclPanelBody">
     <p class="vclPanelContent">
       Send data by pressing the buttons<br><br>
-      <button vcl-button (tap)="send('send')" label="Send data"></button>
-      <button vcl-button (tap)="close('close')" label="close Layer"></button>
+      <button vcl-button (click)="send('send')" label="Send data"></button>
+      <button vcl-button (click)="close('close')" label="close Layer"></button>
     </p>
   </div>
 </div>
