--- a/demo/components/month-picker/month-picker.component.html
+++ b/demo/components/month-picker/month-picker.component.html
@@ -12,7 +12,7 @@
 <button vcl-button #target
   label="Expand"
   class="vclSquare"
-  (tap)="expandMonthPicker($event)">
+  (click)="expandMonthPicker($event)">
 </button>
 
 <vcl-popover
