--- a/demo/components/radio-button/radio-button.component.html
+++ b/demo/components/radio-button/radio-button.component.html
@@ -3,7 +3,7 @@
 <br/>
 <b>State:</b> {{isChecked}}
 <br>
-<button vcl-button (tap)="isChecked=false">Uncheck</button>
+<button vcl-button (click)="isChecked=false">Uncheck</button>
 
 <br>
 <h3>Disabled:</h3>
